--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    # Set timeout for the entire job
+    timeout-minutes: 1
+
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
