--- a/.github/workflows/spectralops.yml
+++ b/.github/workflows/spectralops.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Install
         run: curl -L "https://get.spectralops.io/latest/x/sh?dsn=$SPECTRAL_DSN" | sh
       - name: Scan
-        run: $HOME/.spectral/spectral scan --ok --include-tags base,audit3
+        run: $HOME/.spectral/spectral scan --ok --include-tags base,audit
