--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,14 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+        with:
+          node-version: '16'
 
       - name: setup python 3.6
         uses: actions/setup-python@v2
         with:
           python-version: 3.6 #install the python needed
-          architecture: x64
+          node-version: '16'
       - name: install requirements
         run: pip install -r requirements.txt
       - name: execute main.py script # run the run.py to get the latest data
