--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: setup python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10 #install the python needed
+          python-version: '3.10' #install the python needed
       - name: install requirements
         run: pip install -r requirements.txt
       - name: execute main.py script # run the run.py to get the latest data
