--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,10 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@main
 
       - name: setup python 3.10
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@main
         with:
           python-version: '3.10' #install the python needed
       - name: install requirements
