--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,7 @@ jobs:
           git config --global user.email "${{ secrets.GH_MAIL }}"
           git add cdns.json
           git add dynamic_objects.txt
-          git commit -m "Create/Update outputs"
-          git push
+          if ! git diff-index --quiet HEAD; then
+            git commit -m "Create/Update outputs"
+            git push
+          fi
